# UIPractice

./: build.gradle  gradle.properties  settings.gradle
app/: build.gradle
app/src/androidTest/java/com/example/uipractice/: ExampleInstrumentedTest.kt
app/src/main/: AndroidManifest.xml
app/src/main/aidl/com/example/uipractice/: AIDLPlayService.aidl  IMyAidlInterface.aidl  PlayCallback.aidl
app/src/main/assets/: davidcascade.xml
app/src/main/java/com/example/uipractice/: AttrStyleActivity.java  BaseItemListActivity.kt  CrashHandler.java  ItemBean.kt  MainActivity.kt  MyApp.java  NewFragmentListActivity.kt  SplashActivity.java
app/src/main/java/com/example/uipractice/anim/: AnimListActivity.kt  AnimTestActivity.kt
app/src/main/java/com/example/uipractice/api/: ApiRepository.kt  AppApi.kt
app/src/main/java/com/example/uipractice/architecture/: ArchitectureActivity.kt  LiveActivity.kt  ViewModelActivity.java
app/src/main/java/com/example/uipractice/base/: BaseItemListActivity.kt  BaseListActivity.kt  BaseListAdapter.kt  BaseListFragment.kt  FragmentItemListActivity.kt  ItemBean.kt
app/src/main/java/com/example/uipractice/basepractice/: BaseLibActivity.kt  StatusActivity.kt
app/src/main/java/com/example/uipractice/bean/: Constans.kt  PublishBean.kt
app/src/main/java/com/example/uipractice/camera/: AutoFitSurfaceView.kt  AutoFitTextureView.kt  Camera2Activity.kt  Camera2Helper.kt  Camera2Provider.kt  CameraActivity.kt  CameraSizes.kt  CameraUtil.java  CameraXActivity.kt  CameraXGLProvider.kt  CameraXProvider.kt  ImageUtil.java  OrientationLiveData.kt  StreamDecoder.kt  StreamProvider.kt  文档.md
app/src/main/java/com/example/uipractice/custom/: DogView.java
app/src/main/java/com/example/uipractice/fragment/: AFragment.kt  BFragment.kt  FragmentLifecyclerActivity.kt  FragmentListActivity.kt  FragmentLiveActivity.kt  LiveFragment.kt  (+3 more)
app/src/main/jni/: CMakeLists.txt  native-lib.cpp  native-lib2.cpp  test.cpp
app/src/main/jni/cmaketest/: CMakeLists.txt
app/src/main/jni/cmaketest/math/: CMakeLists.txt  math.cpp
app/src/main/jni/cmaketest/math/include/: math.h
app/src/main/jni/opencv/: CMakeLists.txt  native-lib.cpp  opencv-lib.cpp
app/src/main/res/drawable/: ic_svg_chevron_back_solid.xml  selector_tab_item.xml  shape_round_red.xml
app/src/main/res/layout/: activity_anim_test.xml  activity_appbar_behavior.xml  activity_attr_style.xml  activity_auto_dispose.xml  activity_back_press.xml  activity_camera_x.xml  activity_cordinglayout_base_use.xml  activity_cordinglayout_behavior.xml  activity_event_dispatch.xml  activity_file_provider.xml  activity_fragment_live.xml  activity_fragment_live_navigator.xml  activity_fragment_viewpager2.xml  activity_glide.xml  activity_hot_observer.xml  activity_image_hint.xml  activity_keybord.xml  activity_layout_manager.xml  activity_live.xml  activity_main.xml  activity_n_d_k.xml  activity_opencv_activity.xml  activity_opengl_base_use.xml  activity_opengl_cameractivity.xml  activity_opengl_effect_activity.xml  activity_opengl_main.xml  activity_others_u_i.xml  activity_plugin.xml  activity_plugin_test.xml  activity_progress.xml  activity_retrofit.xml  activity_rv_divider.xml  activity_rx_test.xml  activity_splash.xml  activity_status.xml  activity_stub.xml  activity_view_model.xml  activity_view_pager2.xml  activity_viewpager_two.xml  activity_websocket.xml  (+16 more)
app/src/main/res/navigation/: home_tab_navigation.xml
app/src/main/res/raw/: base_frag.frag  base_tex_frag.frag  base_tex_vert.vert  base_vert.vert  beauty_frag.frag  camera_frag.frag  camera_frag1.frag  camera_frag2.frag  camera_frag3.frag  camera_frag4.frag  camera_vert.vert  soul_effect_frag.frag  split_effect_frag.frag
app/src/main/res/values/: attrs.xml  colors.xml  dimens.xml  ids.xml  strings.xml  styles.xml
app/src/main/res/xml/: export_paths.xml
app/src/test/java/: Regex.kt
app/src/test/java/com/example/uipractice/: ExampleUnitTest.kt
ffplayer/ffplayer/: build.gradle
ffplayer/ffplayer/src/main/: AndroidManifest.xml
ffplayer/ffplayer/src/main/jni/: CMakeLists.txt  native-lib.cpp
gradle/wrapper/: gradle-wrapper.properties
key/: test.jks
libs/baselib/: build.gradle
libs/baselib/src/main/: AndroidManifest.xml
libs/baselib/src/main/java/com/base/: Constans.kt
libs/baselib/src/main/res/values/: attrs.xml  ids.xml  styles.xml
libs/libcustom/: build.gradle
libs/libcustom/src/main/: AndroidManifest.xml
libs/libcustom/src/main/res/layout/: layout_custom.xml  layout_empty.xml  layout_error.xml  layout_timeout.xml
libs/libcustom/src/main/res/values/: strings.xml
libs/rxjavalib/: build.gradle
libs/rxjavalib/src/main/: AndroidManifest.xml
libs/rxjavalib/src/main/res/values/: strings.xml
libs/vad/: build.gradle
player/ffplayer/: build.gradle
player/ffplayer/src/main/: AndroidManifest.xml
player/ffplayer/src/main/jni/: AudioChannel.cpp  AudioChannel.h  AudioChannel2.cpp  CMakeLists.txt  JavaCallbackHelper.cpp  JavaCallbackHelper.h  VideoChannel.cpp  VideoChannel.h  VideoChannel2.cpp  native-lib.cpp  safe_queue.h
player/ffplayer/src/main/jni/ffmpeg/: CMakeLists.txt  FFAudio.cpp  FFAudio.h  FFPlayer.cpp  FFPlayer.h  FFPlayerJavaCallback.cpp  FFPlayerJavaCallback.h  FFVideo.cpp  FFVideo.h  PlayerLock.cpp  PlayerLock.h  Playerstatus.cpp  Playerstatus.h  ffmpeg-lib.cpp  ffmpeg-lib2.cpp
player/ffplayer/src/main/jni/ffmpeg/libavutil/: ffversion.h
player/ffplayer/src/main/jni/librtmp/: CMakeLists.txt  rtmpdump-lib.cpp
player/ffplayer/src/main/jni/log/: log.h  utils.h
player/ffplayer/src/main/jni/soundtouch/: CMakeLists.txt
player/ffplayer/src/main/jni/soundtouch/include/: STTypes.h
player/ffplayer/src/main/jni/x264/: CMakeLists.txt  h264-lib.cpp
player/ffplayer/src/main/res/layout/: activity_camera_encode.xml  activity_clip_audio.xml  activity_ffmpeg.xml  activity_live_push.xml  activity_main.xml  activity_media_codec.xml  activity_media_mexure.xml  activity_media_record.xml
player/ffplayer/src/main/res/values/: ids.xml  strings.xml  themes.xml
script/: android_s_compat.gradle  app.gradle  config.gradle
(+332 files in other folders)
